--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -14,7 +14,7 @@ html {
 
 body {
     font-size: 2.6rem;
-    background-color: #00FA9A;
+    background-color: #4270d3;
 }
 
 .limitar-conteudo {
@@ -29,7 +29,6 @@ body {
     margin: 50px auto;
     box-sizing: border-box;
     width: 90%;
-    border: 1px solid black;
     padding: 25px;
     border-radius: 15px;
     height: 630px;
@@ -86,14 +85,14 @@ body {
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 50%;
     background-color: #89d3d8;
     color: #FFFF;
 
     transition: all 100ms linear 0s;
 }
 
-button:hover {
+.button:hover {
     background-color: #7bced4;
 
     box-shadow: 0px 1px 11px 0px rgba(0, 0, 0, 0.75);
@@ -113,9 +112,91 @@ button:hover {
     }
 }
 
+
 .efeito-flutuante-infinito {
     animation: float 2s ease-in-out infinite;
 }
+
+/* modal */
+
+
+.btn{
+    display: inline;
+    cursor: pointer;
+    transition: background-color 0.5s;
+    position: absolute;
+    top: 33%;
+    left: 59%;
+    transform: translate(-50%, -50%);
+    z-index: 1;
+}
+
+
+.modal-container{
+    width: 100vw;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #0000004b;
+    z-index: 999;
+    align-items: center;
+    justify-content: center;
+    display: none;
+}
+
+.modal{
+    width: 60%;
+    min-width:400px;
+    min-height: 200px;
+    background-color: #ffffff62;
+    backdrop-filter: blur(10px);
+    padding: 50px;
+    border-radius: 10px;
+}
+
+.fechar{
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: none;
+    background-color: #ff0000;
+    color: #fff;
+    font-weight: 700;
+    font-size: 14pt;
+    cursor: pointer;
+}
+
+.modal h1{
+    margin-bottom: 20px;
+}
+
+@keyframes animate-modal {
+    from{
+        opacity: 0;
+        transform: translate3d(0, -20px, 0);
+    }
+
+    to{
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.modal-container.mostrar{
+    display: flex;
+}
+
+.mostrar .modal{
+    animation: animate-modal .3s;
+}
+
+/*  */
+
+
 
 .box-history {
     display: flex;
@@ -140,3 +221,4 @@ button:hover {
     display: flex;
     gap: 25px;
 }
+
