--- a/front/src/css/style.css
+++ b/front/src/css/style.css
@@ -174,6 +174,10 @@ body {
     margin-bottom: 20px;
 }
 
+.alterar {
+    padding: 5px;
+}
+
 @keyframes animate-modal {
     from{
         opacity: 0;
